Navigation mobile padding fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,16 +54,16 @@ html {
     @apply text-white border-b border-white/30 hover:border-yellow-400 focus:border-yellow-400 transition-all duration-200 hover:text-yellow-400 focus:text-yellow-400;
   }
   .btn {
-    @apply rounded-full px-5 py-2 text-xs md:text-sm text-white bg-warmgray-800/70 hover:bg-warmgray-500/80 focus:bg-warmgray-500/80 transition duration-200 backdrop-blur;
+    @apply rounded-full px-4 md:px-5 py-3 md:py-2 text-xs md:text-sm text-white bg-warmgray-800/70 hover:bg-warmgray-500/80 focus:bg-warmgray-500/80 transition duration-200 backdrop-blur;
   }
   .btn__body {
-    @apply rounded-full px-5 py-2 text-xs md:text-sm text-white transition duration-200 bg-white/10 hover:bg-white/20 focus:bg-white/20 backdrop-filter backdrop-blur;
+    @apply rounded-full px-4 md:px-5 py-3 md:py-2 text-xs md:text-sm text-white transition duration-200 bg-white/10 hover:bg-white/20 focus:bg-white/20 backdrop-filter backdrop-blur;
   }
   .btn__sub {
-    @apply rounded-full px-5 py-2 text-xs md:text-sm text-white bg-warmgray-500/70 hover:bg-warmgray-400/80 focus:bg-warmgray-400/80 transition duration-200  mix-blend-difference backdrop-blur;
+    @apply rounded-full px-4 md:px-5 py-3 md:py-2 text-xs md:text-sm text-white bg-warmgray-500/70 hover:bg-warmgray-400/80 focus:bg-warmgray-400/80 transition duration-200  mix-blend-difference backdrop-blur;
   }
   .btn__active {
-    @apply rounded-full px-5 py-2 text-xs md:text-sm text-yellow-400 bg-[#513308] bg-opacity-90 transition duration-200 backdrop-blur mix-blend-difference pointer-events-none;
+    @apply rounded-full px-4 md:px-5 py-3 md:py-2 text-xs md:text-sm text-yellow-400 bg-[#513308] bg-opacity-90 transition duration-200 backdrop-blur mix-blend-difference pointer-events-none;
   }
   .btn:focus,
   .btn__sub:focus,
